k8s/dev/k8s.application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locntp-counter
  namespace: locntp
  labels:
    app: locntp-counter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: locntp-counter
  template:
    metadata:
      labels:
        app: locntp-counter
    spec:
      containers:
        - name: locntp-counter
          image: locntp/user-counter:v0.0.1
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          imagePullPolicy: Never
          ports:
            - containerPort: 8088
          volumeMounts:
            - name: app-config
              mountPath: /app/config
      volumes:
        - name: app-config
          configMap:
            name: app-config
#          envFrom:
#            - secretRef:
#                name: locntp-counter-env
