k8s/dev/k8s.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locntp-counter-service
  namespace: locntp
  labels:
    app: locntp-counter-service

spec:
  type: LoadBalancer
  selector:
    app: locntp-counter
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088

---
apiVersion: v1
kind: Service
metadata:
  name: locntp-counter-kv
  namespace: locntp
  labels:
    app: locntp-counter-kv
spec:
  selector:
    app: locntp-counter-kv
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: locntp-counter-db
  namespace: locntp
  labels:
    app: locntp-counter-db
spec:
  selector:
    app: locntp-counter-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: NodePort
